# nabla

./: CMakeLists.txt  Makefile  example.nabla
src/: annotate.cpp  annotate.h  annotations.cpp  annotations.h  annotator.h  ast.h  ast_builder.cpp  ast_builder.h  ast_writer.cpp  ast_writer.h  console.cpp  console.h  diagnostics.h  interpreter.cpp  interpreter.h  lexer.h  main.cpp  nabla.cpp  parser.cpp  parser.h  syntax_tree.cpp  syntax_tree.h  validator.cpp  validator.h
src/annotators/: add_expr.cpp  add_expr.h  mul_expr.cpp  mul_expr.h  var_expr.cpp  var_expr.h
src/codegen/: code_writer.cpp  code_writer.h  generator.cpp  generator.h
tests/diagnostics/fn_decl/: expected_name.nabla  missing_body.nabla  missing_comma.nabla  missing_return.nabla
tests/diagnostics/let_stmt/: expected_equals.nabla  expected_identifier.nabla  missing_r_operand_add.nabla  missing_r_operand_mul.nabla
tests/diagnostics/print_stmt/: missing_comma.nabla  missing_r_paren.nabla
tests/diagnostics/struct_decl/: invalid_field_name.nabla  invalid_name.nabla  missing_field_type.nabla  missing_field_type_colon.nabla  missing_r_bracket.nabla
